# WindowGame

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE
Common/: CMakeLists.txt
Common/src/: Test.cpp  lm2.hpp  testlib.hpp
Common/tests/: lm2_tests.cpp
Main/: CMakeLists.txt  main.cpp
Rendering/: .gitattributes  CMakeLists.txt
Rendering/dep/lib/: SDL3d.lib
Rendering/headers/: App.h  Pipeline.h  Renderer.h  Window.h  renderer_helpers.h  vertex.h
Rendering/shaders/: forward.slang
Rendering/src/: App.cpp  Pipeline.cpp  Renderer.cpp  Window.cpp  renderer_helpers.cpp
